# distribution-receipt

./: CMakeLists.txt  README.md  main.c
images/: Thumbs.db
paropt/: paropt.c  paropt.h
tool/: common.c  error.c  file_operation.c  tool.h
